Infrastructure/apim/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "apiManagementName": {
            "type": "String"
        },
        "multiRegionDeployment": {
            "type": "string",
            "defaultValue": "false"
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "secondaryLocation": {
            "type": "string",
            "defaultValue": "UK West"
        },
        "primaryVnetName": {
            "type": "String"
        },
        "primaryVnetResourceGroup": {
            "type": "String"
        },
        "secondaryVnetName": {
            "type": "String",
            "defaultValue": "undefined"
        },
        "secondaryVnetResourceGroup": {
            "type": "String",
            "defaultValue": "undefined"
        },
        "customDomain":{
            "type": "string"
        },
        "customDomainCertificateData":{
            "type": "string"
        },
        "customDomainCertificatePassword":{
            "type": "securestring"
        }
    },
    "variables": {
        "skuCount": 1,
        "publisherName": "bjdazuretech",
        "publisherEmail": "brian@bjdazure.tech",
        "subnetName" : "/subnets/APIM",
        "apimNsgName": "apimNSGrules",
        "primarySubnetId": "[concat(resourceId(parameters('primaryVnetResourceGroup'),'Microsoft.Network/virtualNetworks',parameters('primaryVnetName')), variables('subnetName'))]",
        "secondaryLocationSubnetId": "[concat(resourceId(parameters('secondaryVnetResourceGroup'),'Microsoft.Network/virtualNetworks',parameters('secondaryVnetName')), variables('subnetName'))]",
        "secondaryLocationObject": [{
            "location": "[parameters('secondaryLocation')]",
            "sku": {
                "name": "[variables('apimsku')]",
                "capacity": "[variables('skuCount')]"
            },
            "virtualNetworkConfiguration": {
                "subnetResourceId": "[variables('secondaryLocationSubnetId')]"
            }
        }],
        "emptyArray": [],
        "additionalLocationConfig": "[if(equals(parameters('multiRegionDeployment'),'true'),variables('secondaryLocationObject'),variables('emptyArray'))]",
        "apimSKU": "[if(equals(parameters('multiRegionDeployment'),'true'),'Premium','Developer')]"
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('apimNsgName')]",
            "apiVersion": "2018-10-01",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                {
                    "name": "Client_communication_to_API_Management",
                    "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "80",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Inbound"
                    }
                },
                {
                    "name": "Secure_Client_communication_to_API_Management",
                    "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 110,
                    "direction": "Inbound"
                    }
                },
                {
                    "name": "Management_endpoint_for_Azure_portal_and_Powershell",            
                    "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "3443",
                    "sourceAddressPrefix": "ApiManagement",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 120,
                    "direction": "Inbound"
                    }
                },
                {
                    "name": "Dependency_on_Redis_Cache",
                    "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "6381-6383",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 130,
                    "direction": "Inbound"
                    }
                },
                {
                    "name": "Dependency_on_Azure_SQL",
                    "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "1433",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "Sql",
                    "access": "Allow",
                    "priority": 140,
                    "direction": "Outbound"
                    }
                },
                {
                    "name": "Dependency_for_Log_to_event_Hub_policy",
                    "properties": {
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "5671",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "EventHub",
                    "access": "Allow",
                    "priority": 150,
                    "direction": "Outbound"
                    }
                },
                {
                    "name": "Dependency_on_Redis_Cache_outbound",
                    "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "6381-6383",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 160,
                    "direction": "Outbound"
                    }
                },
                {
                    "name": "Dependency_on_Azure_File_Share_for_GIT",
                    "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "445",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "Storage",
                    "access": "Allow",
                    "priority": 170,
                    "direction": "Outbound"
                    }
                },
                {
                    "name": "Azure_Infrastructure_Load_Balancer",
                    "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 180,
                    "direction": "Inbound"
                    }
                },
                {
                    "name": "Publish_DiagnosticLogs_And_Metrics",
                    "properties": {
                    "description": "APIM Logs and Metrics for consumption by admins and your IT team are all part of the management plane",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "AzureMonitor",
                    "access": "Allow",
                    "priority": 185,
                    "direction": "Outbound",              
                    "destinationPortRanges": [
                        "443",
                        "12000",
                        "1886"
                    ]
                    }
                },
                {
                    "name": "Connect_To_SMTP_Relay_For_SendingEmails",
                    "properties": {
                    "description": "APIM features the ability to generate email traffic as part of the data plane and the management plane",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 190,
                    "direction": "Outbound",              
                    "destinationPortRanges": [
                        "25",
                        "587",
                        "25028"
                    ]
                    }
                },
                {
                    "name": "Authenticate_To_Azure_Active_Directory",            
                    "properties": {
                    "description": "Connect to Azure Active Directory for Developer Portal Authentication or for Oauth2 flow during any Proxy Authentication",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "AzureActiveDirectory",
                    "access": "Allow",
                    "priority": 200,
                    "direction": "Outbound",
                    "destinationPortRanges": [
                        "80",
                        "443"
                    ]
                    }
                },
                {
                    "name": "Dependency_on_Azure_Storage",
                    "properties": {
                    "description": "APIM service dependency on Azure Blob and Azure Table Storage",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "Storage",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Outbound"
                    }
                },
                {
                    "name": "Publish_Monitoring_Logs",
                    "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "AzureCloud",
                    "access": "Allow",
                    "priority": 300,
                    "direction": "Outbound"
                    }
                },
                {
                    "name": "Deny_All_Internet_Outbound",
                    "properties": {
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "Internet",
                    "access": "Deny",
                    "priority": 999,
                    "direction": "Outbound"
                    }
                }
                ]
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.ApiManagement/service",
            "apiVersion": "2019-01-01",
            "name": "[parameters('apiManagementName')]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "[variables('apimsku')]",
                "capacity": "[variables('skuCount')]"
            },
            "identity": {
                "type": "systemAssigned"
            },
            "properties": {
                "publisherEmail": "[variables('publisherEmail')]",
                "publisherName": "[variables('publisherName')]",
                "hostnameConfigurations": [
                    {
                        "type": "DeveloperPortal",
                        "hostName": "[concat('developer.', parameters('customDomain'))]",
                        "negotiateClientCertificate": false,
                        "encodedCertificate": "[parameters('customDomainCertificateData')]",
                        "certificatePassword": "[parameters('customDomainCertificatePassword')]",
                        "defaultSslBinding": false
                    },
                    {
                        "type": "Management",
                        "hostName": "[concat('management.', parameters('customDomain'))]",
                        "negotiateClientCertificate": false,
                        "encodedCertificate": "[parameters('customDomainCertificateData')]",
                        "certificatePassword": "[parameters('customDomainCertificatePassword')]",
                        "defaultSslBinding": false
                    },
                    {
                        "type": "Proxy",
                        "hostName": "[concat('api-internal.us.', parameters('customDomain'))]",
                        "negotiateClientCertificate": false,
                        "encodedCertificate": "[parameters('customDomainCertificateData')]",
                        "certificatePassword": "[parameters('customDomainCertificatePassword')]",
                        "defaultSslBinding": true
                    },
                    {
                        "type": "Proxy",
                        "hostName": "[concat('api-internal.uk.', parameters('customDomain'))]",
                        "negotiateClientCertificate": false,
                        "encodedCertificate": "[parameters('customDomainCertificateData')]",
                        "certificatePassword": "[parameters('customDomainCertificatePassword')]",
                        "defaultSslBinding": true
                    }
                ],
                "additionalLocations": "[variables('additionalLocationConfig')]",
                "virtualNetworkConfiguration": {
                    "subnetResourceId": "[variables('primarySubnetId')]"
                },
                "customProperties": {
                    "Microsoft.WindowsAzure.ApiManagement.Gateway.Security.Protocols.Tls10": "False",
                    "Microsoft.WindowsAzure.ApiManagement.Gateway.Security.Protocols.Tls11": "False",
                    "Microsoft.WindowsAzure.ApiManagement.Gateway.Security.Protocols.Ssl30": "False",
                    "Microsoft.WindowsAzure.ApiManagement.Gateway.Security.Ciphers.TripleDes168": "False",
                    "Microsoft.WindowsAzure.ApiManagement.Gateway.Security.Backend.Protocols.Tls10": "False",
                    "Microsoft.WindowsAzure.ApiManagement.Gateway.Security.Backend.Protocols.Tls11": "False",
                    "Microsoft.WindowsAzure.ApiManagement.Gateway.Security.Backend.Protocols.Ssl30": "False",
                    "Microsoft.WindowsAzure.ApiManagement.Gateway.Protocols.Server.Http2": "True"
                },
                "virtualNetworkType": "Internal"
            }
        }
    ]
}
